--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ packaging==23.1
 pluggy==1.0.0
 pydantic==1.10.7
 Pygments==2.15.1
-pymapme==0.0.4
+pymapme
 pytest==7.3.1
 pytest-asyncio==0.21.0
 python-dotenv==1.0.0
