--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 API_KEY=
-URL_BASE="https://quizapi.io/api/v1/questions?apiKey=${API_KEY}"
+URL_BASE="https://quizapi.io/api/v1/questions?apiKey=${API_KEY}&limit=10"
 DB_NAME=questionnaire.db
 TIMEOUT=10
